--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -6,7 +6,7 @@ width:auto!important;
 }
 
 body {
-    font-family: "Open Sans";
+    // font-family: "Open Sans";
     font-size: 14px;
     font-weight: 400;
     color: #333
