--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@
 @import 'tpl-team';
 @import 'tpl-team-about';
 @import 'tpl-why-we';
-@import 'page-about';
+@import 'tpl-roll';
 @import 'page-reviews';
 @import 'page-contacts';
 @import 'comments';
