--- a/css/_forms.scss
+++ b/css/_forms.scss
@@ -570,3 +570,131 @@ div.wpcf7 .ajax-loader {
         padding: 10px;
     }
 }
+
+.forms {
+    .form__row {
+        margin-bottom: 20px;
+    }
+    .wpcf7-response-output {
+        margin: 20px 0;
+        text-align: center;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 100%;
+    }
+    .forms__close {
+        text-decoration: none;
+        position: absolute;
+        color: $red;
+        top: -70px;
+        right: 0;
+        font-family: Arial, sans-serif;
+        font-size: 50px;
+        transition: transform .5s 0s;
+        transform: rotate(45deg);
+        line-height: 25px;
+        &:hover {
+            // color: $red;
+            text-decoration: none;
+            transform: rotate(315deg);
+        }
+    }
+    .form__row+.form__row {
+        margin-top: 10px;
+    }
+}
+
+.form-get-offer {
+    width: 300px;
+    max-width: 100%;
+    padding: 20px;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.8);
+    border-right: 1px solid lightgrey;
+    transition: left 1s 0s;
+    z-index: -1;
+    text-align: center;
+    &.opened {
+        left: 100%;
+    }
+    &__inner {
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+        padding: 1px 0;
+    }
+    .wpcf7-form-control:not(.wpcf7-submit) {
+        border-color: $darkgrey;
+    }
+}
+
+.form-get-roll {
+    padding: 20px 20px 20px 0;
+    position: fixed;
+    transition: left 1s 0s;
+    z-index: -1;
+    top: 50%;
+    transform: translateY(-50%);
+    background: white;
+    height: 580px;
+    left: -100%;
+    &__inner {
+        border: 1px solid #e5e5e5;
+        border-left: 0;
+        padding: 20px 120px 20px 320px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+    }
+    &__inside {
+        max-width: 350px;
+    }
+    &__title {
+        font-size: 24px;
+        font-weight: 700;
+        text-transform: uppercase;
+        line-height: 1.2;
+        color: #666;
+        border-bottom: 1px solid #e5e5e5;
+        padding-bottom: 20px;
+        margin-bottom: 20px;
+    }
+    input:not(.wpcf7-submit) {
+        border-color: transparent;
+    }
+    .wpcf7-submit {
+        width: 100%;
+    }
+    .form__row_decl {
+        color: #999;
+        font-size: 12px;
+        margin: 0;
+    }
+    .forms__close {
+        text-decoration: none;
+        position: absolute;
+        color: #999;
+        top: 15px;
+        right: 10px;
+        z-index: 2;
+    }
+    .wpcf7-response-output {
+        top: auto;
+        bottom: -60px;
+        background: white;
+    }
+    .form-sent-ok {
+    }
+}
+
+.open-form-roll {
+    background: rgba(0, 0, 0, 0.5);
+    .form-get-roll {
+        left: 40%;
+    }
+}
