--- a/css/main.css
+++ b/css/main.css
@@ -3043,7 +3043,6 @@ button.swiper-pagination-bullet {
 @-ms-viewport {
   width: auto !important; }
 body {
-  font-family: "Open Sans";
   font-size: 14px;
   font-weight: 400;
   color: #333; }
@@ -3638,54 +3637,6 @@ input[type=email] {
     .social__icon:hover {
       background-position: right; }
 
-.form-get-offer {
-  width: 300px;
-  max-width: 100%;
-  padding: 20px;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(255, 255, 255, 0.8);
-  border-right: 1px solid lightgrey;
-  transition: left 1s 0s;
-  z-index: -1;
-  text-align: center; }
-  .form-get-offer.opened {
-    left: 100%; }
-  .form-get-offer__inner {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    padding: 1px 0; }
-  .form-get-offer .form__row {
-    margin-bottom: 20px; }
-  .form-get-offer .wpcf7-form-control:not(.wpcf7-submit) {
-    border-color: #666; }
-  .form-get-offer .wpcf7-response-output {
-    margin: 20px 0;
-    text-align: center;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 100%; }
-  .form-get-offer .form-get-offer__close {
-    text-decoration: none;
-    position: absolute;
-    color: #f8615a;
-    top: -70px;
-    right: 0;
-    font-family: Arial, sans-serif;
-    font-size: 50px;
-    transition: transform .5s 0s;
-    transform: rotate(45deg);
-    line-height: 25px; }
-    .form-get-offer .form-get-offer__close:hover {
-      color: #f8615a;
-      text-decoration: none;
-      transform: rotate(315deg); }
-
 .wpcf7-checkbox {
   display: inline-block; }
   .wpcf7-checkbox .wpcf7-list-item {
@@ -4114,6 +4065,109 @@ div.wpcf7 .ajax-loader {
   border: 1px solid;
   margin: 0;
   padding: 10px; }
+
+.forms .form__row {
+  margin-bottom: 20px; }
+.forms .wpcf7-response-output {
+  margin: 20px 0;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100%; }
+.forms .forms__close {
+  text-decoration: none;
+  position: absolute;
+  color: #f8615a;
+  top: -70px;
+  right: 0;
+  font-family: Arial, sans-serif;
+  font-size: 50px;
+  transition: transform .5s 0s;
+  transform: rotate(45deg);
+  line-height: 25px; }
+  .forms .forms__close:hover {
+    text-decoration: none;
+    transform: rotate(315deg); }
+.forms .form__row + .form__row {
+  margin-top: 10px; }
+
+.form-get-offer {
+  width: 300px;
+  max-width: 100%;
+  padding: 20px;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.8);
+  border-right: 1px solid lightgrey;
+  transition: left 1s 0s;
+  z-index: -1;
+  text-align: center; }
+  .form-get-offer.opened {
+    left: 100%; }
+  .form-get-offer__inner {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 1px 0; }
+  .form-get-offer .wpcf7-form-control:not(.wpcf7-submit) {
+    border-color: #666; }
+
+.form-get-roll {
+  padding: 20px 20px 20px 0;
+  position: fixed;
+  transition: left 1s 0s;
+  z-index: -1;
+  top: 50%;
+  transform: translateY(-50%);
+  background: white;
+  height: 580px;
+  left: -100%; }
+  .form-get-roll__inner {
+    border: 1px solid #e5e5e5;
+    border-left: 0;
+    padding: 20px 120px 20px 320px;
+    height: 100%;
+    display: flex;
+    align-items: center; }
+  .form-get-roll__inside {
+    max-width: 350px; }
+  .form-get-roll__title {
+    font-size: 24px;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 1.2;
+    color: #666;
+    border-bottom: 1px solid #e5e5e5;
+    padding-bottom: 20px;
+    margin-bottom: 20px; }
+  .form-get-roll input:not(.wpcf7-submit) {
+    border-color: transparent; }
+  .form-get-roll .wpcf7-submit {
+    width: 100%; }
+  .form-get-roll .form__row_decl {
+    color: #999;
+    font-size: 12px;
+    margin: 0; }
+  .form-get-roll .forms__close {
+    text-decoration: none;
+    position: absolute;
+    color: #999;
+    top: 15px;
+    right: 10px;
+    z-index: 2; }
+  .form-get-roll .wpcf7-response-output {
+    top: auto;
+    bottom: -60px;
+    background: white; }
+
+.open-form-roll {
+  background: rgba(0, 0, 0, 0.5); }
+  .open-form-roll .form-get-roll {
+    left: 40%; }
 
 body {
   background: white;
@@ -5682,6 +5736,74 @@ img {
   .b-why__desc {
     margin-top: 20px;
     line-height: 1.8; }
+
+.roll {
+  position: absolute;
+  top: 50px;
+  left: -238px; }
+  .roll__center {
+    background: #f8615a url(../img/icon-roll-center.png) center no-repeat;
+    width: 66px;
+    height: 66px;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); }
+  .roll__marker {
+    background: url(../img/icon-roll-marker.png) center no-repeat;
+    width: 48px;
+    height: 34px;
+    position: absolute;
+    right: -30px;
+    top: 50%;
+    transform: translate(0, -50%); }
+  .roll__drum {
+    background: white;
+    width: 480px;
+    height: 480px;
+    border-radius: 50%;
+    position: relative;
+    background: url(../img/roll.png) center no-repeat;
+    transform: rotate(0deg);
+    transition: transform 5s ease 0s; }
+  .roll__item {
+    position: absolute;
+    font-size: 14px;
+    color: black;
+    width: 230px;
+    padding: 0 10px 0 50px;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    transform-origin: 0 10px 0;
+    top: 230px;
+    left: 240px; }
+    .roll__item:nth-child(even) {
+      color: #fff; }
+    .roll__item:nth-child(2) {
+      transform: rotate(36deg); }
+    .roll__item:nth-child(3) {
+      transform: rotate(72deg); }
+    .roll__item:nth-child(4) {
+      transform: rotate(108deg); }
+    .roll__item:nth-child(5) {
+      transform: rotate(144deg); }
+    .roll__item:nth-child(6) {
+      transform: rotate(180deg); }
+    .roll__item:nth-child(7) {
+      transform: rotate(216deg); }
+    .roll__item:nth-child(8) {
+      transform: rotate(252deg); }
+    .roll__item:nth-child(9) {
+      transform: rotate(288deg); }
+    .roll__item:nth-child(10) {
+      transform: rotate(324deg); }
+
+.form-sent-ok__prize {
+  font-weight: 700;
+  margin: 10px 0; }
 
 .content__inner_reviews .content__title {
   text-align: center; }
