--- a/css/_forms.scss
+++ b/css/_forms.scss
@@ -660,12 +660,19 @@ div.wpcf7 .ajax-loader {
         text-transform: uppercase;
         line-height: 1.2;
         color: #666;
+    }
+    &__subtitle {
+        font-size: 26px;
+        color: grey;
         border-bottom: 1px solid #e5e5e5;
         padding-bottom: 20px;
         margin-bottom: 20px;
     }
     input:not(.wpcf7-submit) {
         border-color: transparent;
+    }
+    &__form {
+        position: relative;
     }
     .wpcf7-submit {
         width: 100%;
@@ -689,6 +696,10 @@ div.wpcf7 .ajax-loader {
         background: white;
     }
     .form-sent-ok {
+        font-size: 16px;
+    }
+    .ajax-loader {
+        display: none !important;
     }
 }
 
@@ -696,5 +707,15 @@ div.wpcf7 .ajax-loader {
     background: rgba(0, 0, 0, 0.5);
     .form-get-roll {
         left: 40%;
+    }
+    .content::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 1;
     }
 }
