--- a/css/_tpl-roll.scss
+++ b/css/_tpl-roll.scss
@@ -29,7 +29,7 @@
         position: relative;
         background: url(../img/roll.png) center no-repeat;
         transform: rotate(0deg);
-        transition: transform 5s ease 0s;
+        transition: transform 7s ease-out 0s;
     }
     &__item {
         position: absolute;
