--- a/css/_forms.scss
+++ b/css/_forms.scss
@@ -392,7 +392,6 @@ div.wpcf7 .ajax-loader {
     }
     .wpcf7 .wpcf7-response-output {
         @include mn1400 {
-            display: block;
             position: absolute;
             bottom: 44px;
             width: 100%;
@@ -608,6 +607,7 @@ div.wpcf7 .ajax-loader {
 .form-get-offer {
     width: 300px;
     max-width: 100%;
+    height: 100%;
     padding: 20px;
     overflow: hidden;
     position: absolute;
@@ -615,9 +615,9 @@ div.wpcf7 .ajax-loader {
     bottom: 0;
     left: 0;
     background: rgba(255, 255, 255, 0.8);
-    border-right: 1px solid lightgrey;
+    // border-right: 1px solid lightgrey;
     transition: left 1s 0s;
-    z-index: -1;
+    z-index: 1;
     text-align: center;
     &.opened {
         left: 100%;
@@ -637,7 +637,7 @@ div.wpcf7 .ajax-loader {
     padding: 20px 20px 20px 0;
     position: fixed;
     transition: left 1s 0s;
-    z-index: -1;
+    z-index: 1;
     top: 50%;
     transform: translateY(-50%);
     background: white;
