--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@
 @import 'tpl-sliders';
 @import 'tpl-team';
 @import 'tpl-team-about';
+@import 'tpl-about';
 @import 'tpl-why-we';
 @import 'tpl-roll';
 @import 'page-reviews';
