--- a/css/_tpl-about.scss
+++ b/css/_tpl-about.scss
@@ -1,7 +1,16 @@
 .content-wrap_team {
+    font-family: HelveticaNeueCyr, serif;
     background: $red url(../img/bg-team1.png) top right no-repeat;
     .breadcrumbs {
         color: #fff;
+        margin: 20px 0;
+        font-size: 12px;
+    }
+    .content__inner {
+        max-width: none;
+    }
+    .container-fluid {
+        max-width: 1100px;
     }
     .content__title {
         text-align: left;
@@ -35,4 +44,328 @@
             margin-bottom: .5em;
         }
     }
+}
+
+.t-title {
+    color: #fff;
+    font-size: 30px;
+    font-weight: 900;
+    @include mn1024 {
+        font-size: 40px;
+    }
+}
+
+.s-team-employees {}
+
+.b-employees {
+    margin: 40px 0 0;
+    &__persons {
+        display: block;
+        @include mn550 {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .b-employees__person {
+            @include mn550 {
+                width: 50%;
+                padding: 0 10px;
+            }
+            @include mn1024 {
+                width: 33.33%;
+                padding: 0 5px;
+            }
+        }
+    }
+    &__person {
+        position: relative;
+        margin-bottom: 20px;
+    }
+    &__photo {
+        max-width: 370px;
+        padding-right: 30px;
+        padding-left: 20px;
+        padding-top: 20px;
+        margin-bottom: 20px;
+        margin: 0 auto 20px;
+    }
+    &__img {
+        position: relative;
+        margin-bottom: 20px;
+        img {
+            z-index: 1;
+            position: relative;
+        }
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            background: white;
+            opacity: .1;
+            top: -6px;
+            bottom: 8px;
+            left: 0;
+            right: -10px;
+            transform: skewY(-2deg);
+        }
+        &::after {
+            right: -20px;
+            transform: skewY(-6deg);
+        }
+        .border {
+            opacity: 0.5;
+            border: 1px solid white;
+            position: absolute;
+            left: -20px;
+            right: 20px;
+            bottom: -20px;
+            top: 20px;
+        }
+    }
+    &__text {
+        color: white;
+        line-height: 1.2;
+        margin-top: 30px;
+    }
+    &__desc-wrap {
+        position: relative;
+    }
+    &__desc {
+        color: black;
+        background: white;
+        font-size: 18px;
+        font-weight: 300;
+        padding: 30px 5%;
+        overflow: hidden;
+        &::before {
+            content: '';
+            position: absolute;
+            opacity: 0.1;
+            background-color: #f8615a;
+            border-radius: 50%;
+            width: 20%;
+            padding-bottom: 20%;
+            bottom: -20px;
+            left: -20px;
+            @include mn1024 {
+                bottom: -40px;
+                left: -40px;
+            }
+        }
+    }
+    &__desc-inner {
+        padding-left: 40px;
+        p {
+            position: relative;
+            &::before {
+                content: '\2014';
+                color: $red;
+                position: absolute;
+                left: -40px;
+            }
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+        ul {
+            padding-left: 0;
+        }
+    }
+    &__name {
+        font-size: 24px;
+        font-weight: 700;
+    }
+    &__positon {
+        font-size: 18px;
+        font-weight: 300;
+    }
+}
+
+.b-employees__person_dir,
+.b-employees__person_tech {
+    @include mn768 {
+        display: flex;
+    }
+    .b-employees__person {
+        @include mn768 {
+            display: flex;
+            align-items: flex-start;
+        }
+    }
+    .b-employees__photo {
+        @include mn768 {
+            width: 33.33%;
+        }
+    }
+    .b-employees__desc-wrap {
+        @include mn768 {
+            width: 66.67%;
+        }
+    }
+}
+
+.b-employees__person_dir {
+    .b-employees__desc {
+        @include mn768 {
+            padding: 50px 50px 50px 80px;
+            position: absolute;
+            left: -50px;
+            right: 0;
+            top: 40px;
+            bottom: 60px;
+            display: flex;
+            align-items: center;
+        }
+        @include mn1200 {
+            font-size: 24px;
+        }
+    }
+}
+
+.b-employees__person_tech {
+    .b-employees__photo {
+        @include mn768 {
+            order: 2;
+        }
+    }
+    .b-employees__img {
+        .border {
+            bottom: 20px;
+            top: -20px;
+        }
+        &::before,
+        &::after {
+            top: 6px;
+            bottom: -6px;
+            transform: skewY(2deg);
+        }
+        &::after {
+            right: -20px;
+            transform: skewY(6deg);
+        }
+    }
+    .b-employees__desc {
+        font-size: 16px;
+        @include mn768 {
+            padding: 50px 50px 50px 80px;
+            position: absolute;
+            left: 0;
+            right: -30px;
+            top: 40px;
+            bottom: 60px;
+            display: flex;
+            align-items: center;
+        }
+        @include mn1200 {
+            top: 110px;
+            bottom: 70px;
+            right: -40px;
+        }
+        &::before {
+            right: -20px;
+            left: auto;
+            @include mn1024 {
+                bottom: -40px;
+                left: auto;
+                right: -40px;
+            }
+        }
+    }
+    .b-employees__text {
+        @include mn768 {
+            padding-left: 20px;
+        }
+    }
+}
+
+.s-team-advantages {
+    background-image: linear-gradient(-45deg, rgba(52, 0, 131, 0.81) 0%, rgba(0, 159, 123, 0.81) 100%);
+    padding-top: 180px;
+    padding-bottom: 150px;
+    position: relative;
+    background: url(../img/team-bg1.jpg) no-repeat top center;
+    background-size: cover;
+    @include mn1200 {padding-top: 370px;}
+    &__title {
+        margin-bottom: 40px;
+        text-align: center;
+        @include mn1200 {
+            text-align: left;
+        }
+    }
+    &__items {
+        @include mn1200 {
+            margin: 0 -20px;
+            font-size: 0;
+        }
+    }
+    &__item {
+        padding: 20px;
+        @include mn1200 {
+            display: inline-block;
+            vertical-align: top;
+            width: 33.33%;
+        }
+    }
+    &__item-inner {
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        padding: 30px 20px;
+        color: white;
+        font-size: 18px;
+        width: 330px;
+        max-width: 100%;
+        margin: 0 auto;
+        @include mn1200 {
+            font-size: 22px;
+        }
+    }
+    &__caption {
+        text-transform: uppercase;
+        margin-bottom: 20px;
+        &::after {
+            content: '';
+            width: 50px;
+            height: 3px;
+            background: white;
+            display: block;
+            margin-top: 20px;
+        }
+    }
+    &__text {
+        font-size: .9em;
+        font-weight: 100;
+        line-height: 1.2;
+        padding-left: .7em;
+        p {
+            margin: 0.5em 0;
+            position: relative;
+            display: block;
+            &::before {
+                content: '- ';
+                position: absolute;
+                left: -.7em;
+            }
+        }
+    }
+    .slick-prev {
+        left: 0;
+    }
+    .slick-next {
+        right: 0;
+    }
+}
+
+.s-team-about {
+    position: relative;
+    height: 500px;
+    background: #fff;
+    // &::before {
+    //     content: '';
+    //     position: absolute;
+    //     left: 0;
+    //     right: 0;
+    //     top: -146px;
+    //     height: 146px;
+    //     background: url(../img/bg-team-1.png) no-repeat;
+    //     background-size: cover;
+    // }
 }
