--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -153,3 +153,94 @@ html.fixed-footer {
         }
     }
 }
+
+.footernew {
+    background-color: #4b4b4b;
+    color: white;
+    line-height: 1.2;
+    position: relative;
+    margin-top: 200px;
+    &::before {
+        content: '';
+        background: url(../img/bg-footer-new.png) center no-repeat;
+        background-size: cover;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: -200px;
+        height: 238px;
+    }
+    &__inner {
+        opacity: 0.5;
+        @include mn1200 {
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+    &__item {
+        margin: 20px 0;
+    }
+    &__left {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        @include mn1200 {
+            text-align: left;
+        }
+        @include mn1400 {
+            margin-right: 40px;
+        }
+    }
+    &__right {
+        width: 100%;
+    }
+    &__text {
+        margin: 20px 0;
+    }
+    .container-fluid {
+        max-width: 1100px;
+    }
+}
+
+.single-uslugi .footernew::before,
+.page-template-page-tpl-service .footernew::before {
+    background: url(../img/bg-footer-new.png) center no-repeat,url(../img/bg-clients.jpg) 0 0 repeat;
+    background-size: cover, auto;
+}
+
+.page-id-112,
+.home {
+    .footernew {
+        margin-top: 65px;
+    }
+}
+
+.footernew-menu {
+    max-width: 300px;
+    margin: 0 auto;
+    text-transform: uppercase;
+    font-size: 12px;
+    @include mn768 {
+        max-width: none;
+        display: flex;
+        justify-content: space-around;
+    }
+    @include mn1400 {
+        font-size: 14px;
+    }
+    .nav>li>a {
+        padding: 3px;
+        display: inline-block;
+        &:hover,
+        &:focus {
+            background-color: transparent;
+        }
+        &:hover {
+            background: $red;
+        }
+        @include mn1400 {
+            padding: 10px 15px;
+        }
+    }
+}
