--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -232,15 +232,66 @@ html.fixed-footer {
     .nav>li>a {
         padding: 3px;
         display: inline-block;
+        position: relative;
+        &::before {
+            content: "";
+            position: absolute;
+            z-index: -1;
+            left: 0;
+            right: 100%;
+            bottom: 0;
+            background: $red;
+            height: 2px;
+            -webkit-transition-property: right;
+            transition-property: right;
+            -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+            -webkit-transition-timing-function: ease-out;
+            transition-timing-function: ease-out;
+        }
         &:hover,
         &:focus {
             background-color: transparent;
         }
-        &:hover {
-            background: $red;
+        &:hover::before {
+            right: 0;
         }
         @include mn1400 {
-            padding: 10px 15px;
+            padding: 10px 3px;
         }
     }
+}
+
+.footernew__icons {
+    width: 240px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        left: 71px;
+        top: 21px;
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        background: #fff;
+    }
+    &::after {
+        left: 166px;
+    }
+}
+.footernew__icon {
+    width: 50px;
+    height: 50px;
+    background: url() center no-repeat;
+    transition: transform .3s 0s;
+    &:hover {
+        -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+    }
+    &_1 {background-image: url(../img/footer-icon-1.png);}
+    &_2 {background-image: url(../img/footer-icon-2.png);}
+    &_3 {background-image: url(../img/footer-icon-3.png);}
 }
