--- a/css/_page-all.scss
+++ b/css/_page-all.scss
@@ -337,6 +337,7 @@ img {
         text-align: center;
         border-radius: 50%;
         margin: 0 5px;
+        text-decoration: none !important;
     }
     .current {
         background-color: $grey;
@@ -603,6 +604,113 @@ img {
     }
 }
 
-.content-btns {
+.content-btns {}
+
+.table-serm {
+    margin: 30px 0;
+    font-size: 15px;
+    font-weight: 400;
+    text-align: center;
+    &__title {
+        font-size: 20px;
+        font-weight: 700;
+        margin-bottom: 20px;
+        @include mn768{
+            text-align: left;
+        }
+    }
     
+    &__table {
+        &_mobile {
+            @include mn768{
+                display: none;
+            }
+        }
+        &_desktop {
+            display: none;
+            @include mn768{
+                display: block;
+            }
+        }
+    }
+    table {
+        width: 100%;
+    }
+    tr:not(:first-child) {
+        border-top: 1px solid #eeeeee;
+    }
+    th {
+        font-size: 16px;
+        font-weight: 700;
+        text-transform: uppercase;
+        line-height: 50px;
+        text-align: center;
+    }
+    td {
+        padding: 9px 10px;
+    }
+    td:first-child {
+        text-align: left;
+        font-weight: 700;
+    }
+    th:nth-child(2),
+    th:nth-child(4),
+    td:nth-child(2),
+    td:nth-child(4) {
+        background: #f7f7f7;
+    }
+    th:nth-child(3),
+    td:nth-child(3) {
+        background: #f9bfbc;
+    }
+    tr:last-child td {
+        font-weight: 700;
+        font-size: 18px;
+    }
+    tr:last-child td:nth-child(3) {
+        color: $red;
+    }
+    .table-serm__btn {
+        display: block;
+        width: 140px;
+        margin: 5px auto 10px;
+        text-decoration: none !important;
+        color: white !important;
+        background: $red;
+        border: 1px solid $red;
+        line-height: 36px;
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: uppercase;
+        &:hover {
+            color: $red !important;
+            background: white;
+        }
+    }
+}
+
+.table-serm__table_mobile{
+    table {
+        margin-bottom: 20px;
+        &:nth-child(2){
+            th,
+            td {
+                background: #fcdfdd;
+            }        
+        }
+    }
+    th,
+    td {
+        background: #f7f7f7;
+    }
+    td:first-child {
+        text-align: center;
+        font-weight: 400;
+    }
+    tr:last-child td {
+        font-size: 24px;
+    }
+    .table-serm__btn {
+        width: 230px;
+    }
 }
